[project]
name = "balatro-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.3",
    "mlflow>=2.0.0",
    "numpy==1.26.4",
    "pydantic==2.6.3",
    "requests==2.31.0",
    "scikit-learn>=1.0.0",
    "torch==2.2.1",
    "tqdm>=4.67.1",
    "uvicorn==0.27.1",
]
